fixing book title word wrap problem

--- a/src/main/resources/static/library.css
+++ b/src/main/resources/static/library.css
@@ -13,7 +13,7 @@
 body {
     background-color: var(--status-bar-color, gold);
     font-family: 'Roboto', sans-serif;
-    word-wrap: break-word;
+    word-wrap: anywhere;
 }
 body > * {
     background-color: var(--background-color, white);
